# aws-ai-image-analysis

./: .gitignore  main.py  pyproject.toml
tools/: LAST_CHECKPOINT_readme111.txt  README.md  aws_lambda_create_function.sh  aws_rekognition_create.sh  aws_rekognition_detect.sh  aws_s3_create.sh  aws_s3_list.py  aws_s3_upload_image.sh  delete_stack.sh  help_aws_s3api_create-bucket.txt  iam_policy_db.json  setup_aws_profile.sh  tree.md
tools/infrastructure/scripts/: deploy.sh
tools/infrastructure/templates/: main.yml.bkp  template-step1.yaml  template-step2.yaml  template.yaml
tools/task/: main.py
tools/task/test/: tests.py
